Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -200,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"art.vandelay@vandelay.co\" # False\n",
+    " \"art.vandelay@vandelay.co\" # False\n",
     "name"
    ]
   },
