Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -200,8 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " \"art.vandelay@vandelay.co\" # False\n",
-    "name"
+    " \"art.vandelay@vandelay.co\" # False"
    ]
   },
   {
