--- a/index.ipynb
+++ b/index.ipynb
@@ -200,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " \"art.vandelay@vandelay.co\" # False"
+    " \"art.vandelay@vandelay.co\".endswith(\".c\") # False"
    ]
   },
   {
